// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectIO > saves 1`] = `
"export default (
  <page>
    <frame name=\\"\\" />
  </page>
);
"
`;

exports[`ProjectIO > saves 2`] = `
"export default (
  <page>
    <text name=\\"\\" />
  </page>
);
"
`;
